完成了ch2.2的组合回测和分析

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 *.npy
 *.hdf5
 *.xlsx
-*.csv
 
 # 📒 忽略 Jupyter 检查点和缓存
 .ipynb_checkpoints/
@@ -11,3 +10,5 @@ __pycache__/
 
 # 🧠 忽略 IDE 工作文件（如 DataSpell / PyCharm）
 .idea/
+
+data/**/*.csv
